src/styles/_academy.scss
.Academy {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  flex: 1 1 100%;
}

// Fixes excessive margins in hint notifications that contain <Markdown> elements
.markdown-notification {
  *:first-child {
    margin-top: 0;
  }

  *:last-child {
    margin-bottom: 0;
  }
}

// Fix excessive margins applied by bp3-running-text style
.md,
.markdown-notification {
  // Union selector on all header elements
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 20px;
    margin-bottom: 10px;
  }
}

.#{$ns}-popover-content {
  padding: 0.4rem;
}

.#{$ns}-non-ideal-state {
  padding-top: 0.7rem;

  .#{$ns}-non-ideal-state-visual {
    margin-bottom: 0.5rem;
  }

  .#{$ns}-non-ideal-state-title {
    padding: 0.5rem 0 0 0;
  }
}

.assessment-briefing {
  padding-bottom: 0;

  // If the assessment briefing begins with a header, remove its top margin
  *:first-child {
    margin-top: 0;
  }

  .assessment-briefing-button {
    margin-top: 1rem;
  }
}

.Assessment {
  color: $cadet-color-3;

  .contentdisplay-content.#{$ns}-card {
    padding: 10px 20px 10px 20px;

    button.collapse-button {
      /* To override the center-xs center alignment */
      display: block;
      margin: 0 0 10px 0;
    }
  }

  .listing.#{$ns}-card {
    margin: 0 0 1rem 0;
  }

  .listing {
    background-color: $cadet-color-5;
    margin: 0px;
    padding: 0;
    text-align: justify;

    .listing-due-icon {
      vertical-align: baseline;
      margin-right: 0.4rem;
    }
  }

  .listing-picture {
    padding: 0;
    position: relative;

    img {
      height: 100%;
      width: 100%;
      object-fit: cover;
    }

    img.cover-image-submitted {
      filter: gray; /* IE6-9 */
      -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
      filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
    }

    /* Disable grayscale on hover */
    img.cover-image-submitted:hover {
      -webkit-filter: grayscale(0);
      filter: none;
    }
  }

  .listing-text {
    padding: 0.5rem 1rem 0.5rem 1.5rem;
    border: 1rem;
    display: flex;
    flex-direction: column;
  }

  .listing-title {
    display: flex;
    margin-bottom: 2px;

    .listing-title-tooltip {
      /* Space out icon tooltips */
      margin-left: 2px;

      /* Visually separate first icon tooltip from assessment title */
      &:first-of-type {
        margin-left: 6px;
      }

      .#{$ns}-icon {
        vertical-align: baseline;
      }
    }

    .#{$ns}-text-overflow-ellipsis {
      /* Pushes button to the right of container */
      flex-grow: 1;
      display: flex;
    }

    div {
      /* overwrite default padding */
      padding: 0;
      margin-bottom: 0.4rem;
    }

    .col-xs-2 {
      /* flush menu button, span.#{$ns}-popover-wrapper, to right */
      text-align: right;
    }

    h4 {
      margin: 4px 0 0 0;
    }
  }

  .listing-description {
    /* Pushes .listing-controls to the bottom of container */
    flex-grow: 1;
    /* Creates space between the description text, buttons and title */
    margin: 1rem 0rem 1rem 0rem;
  }

  .listing-controls {
    display: flex;

    .listing-due-date {
      /* Pushes button to the right of container */
      display: flex;
      flex-grow: 1;
      align-items: center;
      padding-top: 6px;
    }
  }
}

.betcha-dialog,
.assessment-reset {
  span.warning {
    font-weight: bold;
    color: firebrick;
  }

  div.#{$ns}-dialog-body {
    margin: 15px 20px 15px 20px;
  }

  div.#{$ns}-dialog-footer {
    // align the div.#{$ns}-button-group right
    text-align: right;
  }
}

.WorkspaceParent {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* Increase default margin of Blueprint's Divider for greater vertical spacing */
.#{$ns}-divider {
  margin: 12px 0 12px 0;
}

.Grading {
  /* To show the table borders that get cut out by a Card */
  padding: 1px;

  /** 
   *  To prevent misalignment of column header and content 
   *  for large displays. This effectively flushes the content left.
   *  See https://github.com/source-academy/cadet-frontend/pull/148
   */
  .ag-body-container {
    display: block;
    /* Override ag-grid style to suppress unnecessary vertical scrollbar (bugfix) */
    margin-bottom: 0;
  }

  .#{$ns}-icon {
    /* Vertically centre appearance of blueprintjs icons in ag-grid */
    margin-top: 6px;
  }

  .ag-paging-panel {
    border-top: none;
    font-weight: bold;
    padding: 10px;
  }

  :focus {
    /* Disable rendering blue border when a sub-component in grid is in focus */
    outline: none;
  }
}

.ag-grid-controls {
  display: flex;
  align-items: center;
  justify-content: space-between;

  .#{$ns}-icon {
    /* Remove unnecessary margin to right when button text is hidden */
    margin-right: 0;
  }

  .ag-grid-button-text {
    margin-left: 7px;
  }

  .pagination-details.pagination-details.pagination-details {
    /* Chain selectors for increased specificity: set default cursor */
    cursor: default;
    font-weight: bold;

    .#{$ns}-button-text {
      display: inline-flex;
      flex-direction: column;
      align-items: center;
    }
  }
}

.ag-header-cell.ag-header-cell.ag-header-cell {
  /* Chain selectors for increased specificity: reduce internal padding of header cells */
  padding-left: 0.375em;
  padding-right: 0.375em;

  .ag-header-cell-label {
    /* Increase font size of headers; pad left to centre with filter icon */
    font-size: 1.1em;
    font-weight: bold;
    justify-content: center;
    padding-left: 1em;
  }
}

.ag-cell {
  font-size: 1.1em;
  /* Override to reduce ag-grid default padding */
  padding-left: 0.375em !important;
  padding-right: 0.375em !important;
  text-align: center;
}

.ag-cell-focus,
.ag-cell-no-focus {
  /* Suppress blue border around focused cells from ag-grid stylesheet */
  border: none !important;
}

#filterBar {
  width: 400px;
}

.md th,
.md td {
  text-align: left;
  padding: 8px;
}

.md tr:nth-child(even) {
  background-color: #f2f2f2;
}

.editing-textarea {
  height: 100%;
  width: 100%;
  overflow: hidden;
  resize: none;
}

